--- a/template/scss/layout/_circle.scss
+++ b/template/scss/layout/_circle.scss
@@ -230,7 +230,7 @@
                 margin-bottom: 3rem;
             }
 
-            @media (min-width: 800px) {
+            @media (min-width: 1024px) {
                 &:hover {
                     // transform: translateY(1.2rem);
 
